# gene_sys

./: Cargo.toml  Readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: _config.yml  contributing.md  index.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/context/: contributing.md
examples/: parse_reaction.rs
src/: lib.rs  main  main.rs
src/business_logic/: mod.rs
src/database/: answers.rs  compound.rs  enzyme.rs  mod.rs  reaction.rs
src/database/sql/: create_DB.sql  create_compound.sql
src/parcing/: compound.rs  enzyme.rs  mod.rs  reaction.rs
tests/: db_test.rs
