[package]
name = "gene_sys"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "gene_sys"
path = "src/main.rs"

[lib]
name = "gene_sys"
path = "src/lib.rs"